# natnet_ros2

./: .gitignore  CMakeLists.txt  README.md  install_sdk.sh  package.xml
.github/workflows/: AMD64-humble.yaml  AMD64-jazzy.yaml  ARM64-humble.yaml  ARM64-jazzy.yaml  arm_build.yaml  foxy.yaml  humble.yaml  jazzy.yaml  main.yaml
config/: conf_autogen.yaml  initiate.yaml
include/natnet_ros2/: natnet_ros2.hpp  nn_filter.hpp  object_data.hpp
launch/: gui_natnet_ros2.launch.py  natnet_ros2.launch.py
natnet_ros2_py/: node_module.py
scripts/: helper_node_r2.py
src/: marker_poses_server.cpp  natnet_ros2.cpp  nn_filter.cpp
ui/: helper.ui
